# 20231120-SecureOpticalNetworkSimulator

./: LICENSE  Log  README.md  config.py  config.toml  data.csv  data_6N8E_load_br.csv  graph_algorithms.py  logconfig.ini  main.py  pyproject.toml  readme.md  repeat_run_config.py  requirements.txt  result_Load.csv  result_Load150.csv  result_Load300.csv  result_Load400.csv  result_Load50.csv  results.xlsx  runner.py  simconfig.ini  simulator.py  stats.py  ~$results.xlsx
algorithm/: __init__.py  benchmark.py  car.py  dynamic_praca.py  fuzzy.py  markov.py  pson_mer.py  pson_mer_subtopo.py  pson_sasp.py  pson_sasp_cf.py  pson_sf.py  pson_spf.py  sfsr.py  sosr.py  static_spf.py
algorithms/: __init__.py  ag_cf_grooming.py  ag_jdr_grooming.py  ag_sf_grooming.py  auxiliary_graph.py  base.py
data/: 20260516-2300-results.csv  20260517-1317-results.csv  20260517-2312-results.csv  README.txt  data_6N8E_load_br.csv  data_6N8E_lsr_br.csv  data_NSFNET_load_br_2.csv  data_NSFNET_load_br_3.csv  data_NSFNET_lsr_br.csv  data_lsr_br.csv  data_lsr_load.csv  raw_results_10loads_10seeds.csv  summary_mean_std_sem.csv
event/: __init__.py  control_plane.py  event.py  events.py  scheduler.py  traffic.py
examples/: config.json  protected_config.json  topology.json
graphml/: SixNode.graphml
integer_linear_programming/: __init__.py  config.py  data_model.py  network.py  reporting.py  solver.py  topology_loader.py  visualization.py
models/: __init__.py  common.py  config.py  events.py  exceptions.py  flow.py
network/: __init__.py  attack.py  controller.py  generator.py  info.py  (+5 more)
(+116 files in other folders)
