[project]
name = "wdm-sim"
version = "0.1.0"
description = "A Python 3.11 WDM optical network discrete-event simulator inspired by ONS v3.0."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
]

[project.scripts]
wdm-sim = "wdm_sim.cli:main"

[tool.setuptools.packages.find]
include = ["wdm_sim*"]

